fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body,
     padding-left: 14.063rem;
     padding-right: 14.063rem;
     padding-top: 20rem;
+    overflow-x: hidden;
 
 }
 
